data/usersCode/rvrev/question1/error.txt
/home/gauravghati/clash/data/usersCode/rvrev/question1/code1-1.cpp: In function ‘int main()’:
/home/gauravghati/clash/data/usersCode/rvrev/question1/code1-1.cpp:6:2: error: expected initializer before ‘cin’
  cin>>n;
  ^~~
/home/gauravghati/clash/data/usersCode/rvrev/question1/code1-1.cpp:7:16: error: ‘n’ was not declared in this scope
  for(int i=0;i<n;i++){
                ^
/home/gauravghati/clash/data/usersCode/rvrev/question1/code1-1.cpp:11:1: error: expected ‘;’ before ‘}’ token
 }
 ^
